--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.gopaldevopslab</groupId>
   <artifactId>GopalDevOpsLab</artifactId>
   <packaging>war</packaging>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.4</version>
   <name>GopalDevOpsLab</name>
   <url>http://maven.apache.org</url>
   <dependencies>
